Increase header margin

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
         box-shadow: 0 0 15px grey;
         position: fixed;
         width: 100%;
-        padding-left: 20px;
+        padding: 10px 0 10px 20px;
         z-index: 10000;
         background-color: #101c29;
         ">
