--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,10 @@
       opacity: 0;
     }
     .fieldHover {
-      border: 2px solid #1ca1c1;
-      margin-top: -1px;
-      margin-left: -1px;
+      /*border: 2px solid #1ca1c1;*/
+      /*margin-top: -1px;*/
+      /*margin-left: -1px;*/
+      /*background-color: darkblue;*/
     }
     .control {
       background-color: white;
